# passeval

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/dictionaries/: apellidos_en.txt  apellidos_es.txt  nombres_en.txt  nombres_es.txt  palabras_en.txt  palabras_es.txt  passwords_en.txt  toponimos_es.txt
etl/: __init__.py  _stats_accumulators.py  ingest.py  monitor.py  stats_compute.py
scripts/: build_palabras_es.py
sql/: 01_schema_stats.sql  02_schema_public.sql  03_grants.sql
src/passeval/: __init__.py  breach_hibp.py  cli.py  config.py  cracking.py  db.py  normalize.py  report.py  user_stats.py
src/passeval/strength/: __init__.py  charset.py  model.py  shannon.py
src/passeval/strength/patterns/: __init__.py  dates.py  dictionary.py  keyboard.py  leet.py  match.py  repetition.py  sequences.py  spanish.py
systemd/: passeval-ingest.service  passeval-web.service
tests/: test_breach_hibp.py  test_cli.py  test_cracking.py  test_etl_ingest.py  test_etl_monitor.py  test_etl_stats_accumulators.py  test_etl_stats_compute.py  test_normalize.py  test_patterns_dates.py  test_patterns_dictionary.py  test_patterns_keyboard.py  test_patterns_leet.py  test_patterns_repetition.py  test_patterns_sequences.py  test_patterns_spanish.py  test_report.py  test_strength_charset.py  test_strength_model.py  test_strength_shannon.py
web/: app.py
web/static/: index.html
